[gd_scene load_steps=2 format=3 uid="uid://c3saf8tf465f2"]

[ext_resource type="Script" path="res://Entities/TreasureSpawner/PickupSpawner.gd" id="1_d3naq"]

[node name="PickupSpawner" type="Node2D"]
script = ExtResource("1_d3naq")

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
